# vkaTest1

./: .gitignore  CMakeLists.txt  conanfile.py  run-build.sh
src/: 3d.vert  main.cpp  monotonic_allocator.hpp  monotonic_allocator.test.cpp  shader-compile.sh  text.frag  triangle.cpp  triangle.vert
src/shaders/: 3d.frag  3d.vert  CMakeLists.txt  text.vert  triangle.frag  triangle.frag.json  triangle.vert  triangle.vert.json
